# full-stack-todo-rust-course

./: docker-compose.yml
backend/rust/axum/lessons/data/: Cargo.toml
backend/rust/axum/lessons/data/src/: lib.rs
backend/rust/axum/lessons/data/src/database/: prelude.rs
backend/rust/axum/lessons/data/src/routes/: create_task.rs  custom_json_extractor.rs  get_tasks.rs  guard.rs  update_tasks.rs  validate_with_serde.rs
backend/rust/axum/lessons/hello_world/: Cargo.toml
backend/rust/axum/lessons/hello_world/src/: main.rs
backend/rust/axum/lessons/routing/: Cargo.toml
backend/rust/axum/lessons/routing/src/: lib.rs
backend/rust/axum/lessons/routing/src/routes/: mirror_user_agent.rs  set_middleware_custom_header.rs
backend/rust/axum/project_solution/: Cargo.toml
backend/rust/axum/project_solution/src/: lib.rs  main.rs
backend/rust/axum/project_solution/src/database/: prelude.rs
backend/rust/axum/project_solution/src/middleware/: require_authentication.rs
backend/rust/axum/project_solution/src/routes/tasks/: create_task_extractor.rs
integration-tests/backend-tests/: package-lock.json
