[package]
name = "project_solution"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
bcrypt = "0.15.1"
chrono = "0.4.23"
dotenvy = "0.15.6"
dotenvy_macro = "0.15.1"
jsonwebtoken = "9.3.0"
sea-orm = { version = "1.0.0", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
serde_with = "3.9.0"
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread"] }
validator = { version = "0.18.1", features = ["derive"] }
